syntax = "proto3";

package greet;

option java_multiple_files = true;
option java_package = "com.proto.greet";

message greeting {
	string first_name = 1;
	string last_name = 2;
}

message greetingRequest {
	greeting greeting = 1;
}

message greetingResponse{
	string result = 1;
}

service greetingService{
	//unary
	rpc Greet(greetingRequest) returns (greetingResponse) {};

	//server streaming
	rpc GreetManyTimes(greetingRequest) returns (stream greetingResponse) {};

	//client streaming
	rpc LongGreet(stream greetingRequest) returns (greetingResponse) {};

	//Bi-directional streaming
	rpc GreetEveryone(stream greetingRequest) returns (stream greetingResponse) {};
}